.provarCaches/00D5f000005vwGkEAI/objects/rstk__sopd__c.object
<CustomObject>
    <description>sopd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This indicates whether this Pricing Promotion is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_desc__c</fullName>
        <inlineHelpText>This is the Description of this Promotion for this Product</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_frdate__c</fullName>
        <inlineHelpText>This is the Starting Date for this Price Promotion</inlineHelpText>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_price__c</fullName>
        <inlineHelpText>This is the Price of the Product for this Promotion</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_promo__c</fullName>
        <inlineHelpText>This is the Promotion Number</inlineHelpText>
        <label>Promotion Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_soprod__c</fullName>
        <inlineHelpText>This is the Product associated with this Promotion</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipName>sopds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sopd_todate__c</fullName>
        <inlineHelpText>This is the Ending Date for this Price Promotion</inlineHelpText>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SO Date Pricing</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SOPD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Date Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>